nicknamer/server/tests/snapshots/names_endpoints_tests__can_handle_delete_request_for_nonexistent_name.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: delete_nonexistent_name_error
status: 500
content_type: text/html; charset=utf-8
headers:
  content-length: "458"
  content-type: text/html; charset=utf-8
  hx-reswap: innerHTML
html_body: "<div class=\"alert alert-error\">\n  <svg\n    xmlns=\"http://www.w3.org/2000/svg\"\n    class=\"stroke-current shrink-0 h-6 w-6\"\n    fill=\"none\"\n    viewBox=\"0 0 24 24\"\n  >\n    <path\n      stroke-linecap=\"round\"\n      stroke-linejoin=\"round\"\n      stroke-width=\"2\"\n      d=\"M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z\"\n    />\n  </svg>\n  <span>An unexpected error occurred while processing your request. Please try again later.</span>\n</div>"
