nicknamer/server/tests/snapshots/names_endpoints_tests__can_handle_form_with_special_characters_in_name.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: form_with_special_characters
status: 200
content_type: text/html; charset=utf-8
headers:
  content-length: "1222"
  content-type: text/html; charset=utf-8
html_body: "\n<div class=\"overflow-x-auto\">\n  <table class=\"table table-zebra w-full\">\n    <thead>\n      <tr>\n        <th>Discord ID</th>\n        <th>Name</th>\n        <th>Actions</th>\n      </tr>\n    </thead>\n    <tbody>\n      \n      <tr>\n        <td>888999000</td>\n        <td class=\"font-semibold\">User With Spaces!</td>\n        <td>\n          <button \n            class=\"btn btn-error btn-sm\"\n            hx-delete=\"/names/1\"\n            hx-target=\"#names-table\"\n            hx-confirm=\"Are you sure you want to delete this name entry?\"\n          >\n            <svg xmlns=\"http://www.w3.org/2000/svg\" class=\"h-4 w-4\" fill=\"none\" viewBox=\"0 0 24 24\" stroke=\"currentColor\">\n              <path stroke-linecap=\"round\" stroke-linejoin=\"round\" stroke-width=\"2\" d=\"M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16\" />\n            </svg>\n            Delete\n          </button>\n        </td>\n      </tr>\n      \n    </tbody>\n  </table>\n</div>\n\n\n\n<div class=\"stats stats-horizontal shadow mt-6\">\n  <div class=\"stat\">\n    <div class=\"stat-title\">Total Names</div>\n    <div class=\"stat-value\">1</div>\n    <div class=\"stat-desc\">Names in database</div>\n  </div>\n</div>"
