nicknamer/server/tests/snapshots/names_endpoints_tests__can_serve_add_name_form.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: add_name_form
status: 200
content_type: text/html; charset=utf-8
headers:
  content-length: "1640"
  content-type: text/html; charset=utf-8
html_body:
  - "<div class=\"bg-base-200 p-4 rounded-lg\">"
  - "  <h3 class=\"text-lg font-semibold mb-3\">Add New Name</h3>"
  - "  <div id=\"error-message\" class=\"mb-4\"></div>"
  - "  <form"
  - "    hx-post=\"/names\""
  - "    hx-target=\"#names-table\""
  - "    hx-swap=\"innerHTML\""
  - "    hx-on::after-request=\"if(event.detail.successful) { this.innerHTML=''; }\""
  - "    hx-target-error=\"#error-message\""
  - "    class=\"space-y-4\""
  - "  >"
  - "    <div class=\"form-control\">"
  - "      <label class=\"label\">"
  - "        <span class=\"label-text\">Discord ID</span>"
  - "      </label>"
  - "      <input"
  - "        type=\"number\""
  - "        name=\"discord_id\""
  - "        placeholder=\"Enter Discord ID\""
  - "        class=\"input input-bordered w-full\""
  - "        required"
  - "      />"
  - "    </div>"
  - "    <div class=\"form-control\">"
  - "      <label class=\"label\">"
  - "        <span class=\"label-text\">Name</span>"
  - "      </label>"
  - "      <input"
  - "        type=\"text\""
  - "        name=\"name\""
  - "        placeholder=\"Enter name\""
  - "        class=\"input input-bordered w-full\""
  - "        required"
  - "      />"
  - "    </div>"
  - "    <div class=\"flex gap-2\">"
  - "      <button type=\"submit\" class=\"btn btn-primary\">"
  - "        <svg"
  - "          xmlns=\"http://www.w3.org/2000/svg\""
  - "          class=\"h-4 w-4 mr-2\""
  - "          fill=\"none\""
  - "          viewBox=\"0 0 24 24\""
  - "          stroke=\"currentColor\""
  - "        >"
  - "          <path"
  - "            stroke-linecap=\"round\""
  - "            stroke-linejoin=\"round\""
  - "            stroke-width=\"2\""
  - "            d=\"M5 13l4 4L19 7\""
  - "          />"
  - "        </svg>"
  - "        Add Name"
  - "      </button>"
  - "      <button"
  - "        type=\"button\""
  - "        class=\"btn btn-ghost\""
  - "        onclick=\"document.getElementById('add-name-form').innerHTML = ''\""
  - "      >"
  - "        Cancel"
  - "      </button>"
  - "    </div>"
  - "  </form>"
  - "</div>"
