nicknamer/server/tests/snapshots/names_endpoints_tests__can_serve_edit_name_form.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: edit_name_form
status: 200
headers:
  content-type: text/html; charset=utf-8
html_body:
  - "<tr id=\"name-row-1\">"
  - "  <td>777888999</td>"
  - "  <td>test-server-1</td>"
  - "  <td>"
  - "    <form"
  - "      id=\"edit-form-1\""
  - "      hx-put=\"/names/1\""
  - "      hx-target=\"closest tr\""
  - "      hx-swap=\"outerHTML\""
  - "      class=\"inline-block\""
  - "    >"
  - "      <input"
  - "        type=\"text\""
  - "        name=\"name\""
  - "        value=\"EditableTestUser\""
  - "        class=\"input input-bordered input-sm w-full max-w-xs min-w-0\""
  - "        required"
  - "      />"
  - "      <input"
  - "        type=\"hidden\""
  - "        name=\"server_id\""
  - "        value=\"test-server-1\""
  - "      />"
  - "    </form>"
  - "  </td>"
  - "  <th>"
  - "    <button"
  - "      type=\"submit\""
  - "      form=\"edit-form-1\""
  - "      class=\"btn btn-success btn-sm mr-2\""
  - "    >"
  - "      <svg"
  - "        xmlns=\"http://www.w3.org/2000/svg\""
  - "        class=\"h-4 w-4\""
  - "        fill=\"none\""
  - "        viewBox=\"0 0 24 24\""
  - "        stroke=\"currentColor\""
  - "      >"
  - "        <path"
  - "          stroke-linecap=\"round\""
  - "          stroke-linejoin=\"round\""
  - "          stroke-width=\"2\""
  - "          d=\"M5 13l4 4L19 7\""
  - "        />"
  - "      </svg>"
  - "      Save"
  - "    </button>"
  - "    <button"
  - "      type=\"button\""
  - "      class=\"btn btn-ghost btn-sm\""
  - "      hx-get=\"/names/1\""
  - "      hx-target=\"#name-row-1\""
  - "      hx-swap=\"outerHTML\""
  - "    >"
  - "      Cancel"
  - "    </button>"
  - "  </th>"
  - "</tr>"
